# basedpyright

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-hooks.yaml  .prettierignore  .python-version  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  basedpyright.code-workspace  bun.lockb  eslint-suppressions.json  eslint.config.mjs  get_version.py  gg.cmd  gg.toml  index.html  latest  lerna.json  mkdocs.yml  package-lock.json  package.json  pdm.toml  pdm_build.py  pnpm-lock.yaml  pnpm-workspace.yaml  pw  pw.ps1  pyproject.toml  tsconfig.json  versions.json  zizmor.yaml
.basedpyright/: baseline.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue.yaml
.github/workflows/: build_and_release.yml  deps.yaml  docs.yaml  intellij_build.yml  intellij_release.yml  mypy_primer_comment.yaml  mypy_primer_pr.yaml  mypy_primer_push.yaml  validation.yml
.mypy/: baseline.json
.pyright/: workspaceSymbolsCache_v1.json
.zed/: settings.json
asdf/: 404.html  index.html  sitemap.xml
asdf/shoutouts/: index.html
based_build/: __init__.py  docs_macros.py  generateAllDocstubs.sh  generate_docstubs.py  get_version.py  localization_helper.py
basedpyright/: __main__.py  langserver.py  pyright.py  run_bun.py  run_node.py
dev/: 404.html  index.html  sitemap.xml
dev/search/: search_index.json
dev/shoutouts/: index.html
dev/stylesheets/: extra.css
docs/: _sidebar.md  build-debug.md  command-line.md  configuration.md  import-resolution.md  index.html  index.md  installation.md  internals.md  localization-difference-zh-cn.md  localization-ru.md  localization.md  settings.md  shoutouts.md
docs/benefits-over-pyright/: baseline.md  better-defaults.md  dataclass-transform.md  errors-on-invalid-configuration.md  fixed-context-manager-exit-types.md  fixes-for-rules.md  improved-ci-integration.md  improved-completions.md  improved-generic-narrowing.md  improved-reportUninitializedInstanceVariable.md  improved-translations.md  inline-typed-dict.md  language-server-improvements.md  new-diagnostic-rules.md  pylance-features.md  pypi-package-vscode-pinning.md
docs/configuration/: command-line.md  comments.md  config-files.md  environment-variables.md  language-server-settings.md
docs/development/: build-debug.md  contributing.md  internals.md  localization.md  upstream.md
docs/getting_started/: features.md  getting-started.md
docs/improvements/: fast-workspace-initialization.md
docs/installation/: command-line-and-language-server.md  ides.md  pre-commit hook.md  prek-hook.md
gg/: uv
intellij/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
mypy/: build.py  checker.py  checkexpr.py  checkmember.py  errorcodes.py  fastparse.py  join.py  main.py  messages.py  nodes.py  semanal.py  semanal_infer.py  subtypes.py  suggestions.py  typeanal.py  typeops.py  types.py
tests/: __init__.py  ruff.toml  test_generate_docstubs.py  test_python_command.py
v1.18.1/: 404.html  index.html  sitemap.xml
v1.18.2/: 404.html  index.html  sitemap.xml
v1.18.3/: 404.html  index.html  sitemap.xml
v1.18.4/: 404.html  index.html  sitemap.xml
v1.19.0/: 404.html  index.html  sitemap.xml
v1.19.1/: 404.html  index.html  sitemap.xml
v1.20.0/: 404.html  index.html  sitemap.xml
v1.21.0/: 404.html  index.html  sitemap.xml
v1.21.1/: 404.html  index.html  sitemap.xml
v1.22.0/: 404.html  index.html  sitemap.xml
v1.22.1/: 404.html  index.html  sitemap.xml
v1.23.0/: 404.html  index.html  sitemap.xml
v1.23.1/: 404.html  index.html  sitemap.xml
v1.23.2/: 404.html  index.html  sitemap.xml
v1.24.0/: 404.html  index.html  sitemap.xml
v1.25.0/: 404.html  index.html  sitemap.xml
v1.26.0/: 404.html  index.html  sitemap.xml
v1.27.0/: 404.html  index.html  sitemap.xml
v1.27.1/: 404.html  index.html  sitemap.xml
v1.28.0/: 404.html  index.html  sitemap.xml
v1.28.1/: 404.html  index.html  sitemap.xml
v1.28.2/: 404.html  index.html  sitemap.xml
v1.28.3/: 404.html  index.html  sitemap.xml
v1.28.4/: 404.html  index.html  sitemap.xml
v1.28.5/: 404.html  index.html  sitemap.xml
v1.29.0/: 404.html  index.html  sitemap.xml
v1.29.1/: 404.html  index.html  sitemap.xml
v1.29.2/: 404.html  index.html  sitemap.xml
v1.29.3/: 404.html  index.html  sitemap.xml
v1.29.4/: 404.html  index.html  sitemap.xml
v1.29.5/: 404.html  index.html  sitemap.xml
v1.30.0/: 404.html  index.html  sitemap.xml
v1.30.1/: 404.html  index.html  sitemap.xml
v1.31.0/: 404.html  index.html  sitemap.xml
v1.31.1/: 404.html  index.html  sitemap.xml
v1.31.2/: 404.html  index.html  sitemap.xml
v1.31.3/: 404.html  index.html  sitemap.xml
v1.31.4/: 404.html  index.html  sitemap.xml
v1.31.5/: 404.html  index.html  sitemap.xml
v1.31.6/: 404.html  index.html  sitemap.xml
v1.31.7/: 404.html  index.html  sitemap.xml
v1.32.0/: 404.html  index.html  sitemap.xml
v1.32.1/: 404.html  index.html  sitemap.xml
v1.33.0/: 404.html  index.html  sitemap.xml
v1.34.0/: 404.html  index.html  sitemap.xml
v1.35.0/: 404.html  index.html  sitemap.xml
v1.36.0/: 404.html  index.html  sitemap.xml
v1.36.1/: 404.html  index.html  sitemap.xml
v1.36.2/: 404.html  index.html  sitemap.xml
v1.37.0/: 404.html  index.html  sitemap.xml
v1.37.1/: 404.html  index.html  sitemap.xml
v1.37.2/: 404.html  index.html  sitemap.xml
v1.37.3/: 404.html  index.html  sitemap.xml
v1.37.4/: 404.html  index.html  sitemap.xml
v1.38.0/: 404.html  index.html  sitemap.xml
v1.38.1/: 404.html  index.html  sitemap.xml
v1.38.2/: 404.html  index.html  sitemap.xml
v1.38.3/: 404.html  index.html  sitemap.xml
v1.38.4/: 404.html  index.html  sitemap.xml
v1.39.0/: 404.html  index.html  sitemap.xml
v1.39.3/: 404.html  index.html  sitemap.xml
v1.39.4/: 404.html  index.html  sitemap.xml
v1.39.5/: 404.html  index.html  sitemap.xml
v1.39.6/: 404.html  index.html  sitemap.xml
v1.39.7/: 404.html  CNAME  index.html  sitemap.xml
v1.39.8/: 404.html  index.html  sitemap.xml
v1.39.9/: 404.html  badge.json  index.html  sitemap.xml
(+2574 files in other folders)
