[tool.pyprojectx]
main = ["pdm==2.18.2"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pylint>=3.0.0a7",
    "ruff>=0.2.2",
    # cli is needed for development if node is not installed globally
    "nodejs-wheel>=20.13.1",
    "pdm-backend>=2.3.0",
    "typing_extensions>=4.12.2",
    "pytest>=8.2.2",
    "pytest-github-actions-annotate-failures>=0.2.0",
    "basedtyping>=0.1.4",
    "mkdocs-material>=9.5.37",
    "mkdocs-awesome-pages-plugin>=2.9.2",
    "mike>=2.1.3",
]
docstubs = [
    # these deps are also needed in build-system.requires. see https://github.com/pdm-project/pdm/issues/2947
    "docify>=1.0.0",
    # transient dependency of docify, but we need to specify it here explicitly to prevent it from being resolved
    # to 1.1.0 (the last version compatible with 3.8) because the published package has a different version range
    # to our dev dependencies
    "libcst>=1.5.0",
]
docstubs_old = [
    # docify depends on libcst which doesn't have a version that supports 3.8-3.13, so we need to use 2 different versions
    "docify>=1.0.0",
    "libcst==1.1.0",
]
lochelper = ["rich>=13.0", "textual>=0.70.0"]

[tool.pdm.version]
source = "call"
getter = "based_build.get_version:get_version"

[tool.pdm.scripts]
update = "pdm update -G dev -G docstubs -d lochelper"
# we specify the python range here because our dev dependencies require at least python 3.9 but we still want to
# support 3.8 in the published package. ideally we wouldn't because it's EOL but we want to support all versions
# of python supported by pyright. https://github.com/DetachHead/basedpyright/issues/658
refresh_lockfiles = { composite = [
    "pdm lock --update-reuse -G dev -G docstubs -G lochelper --python=\">=3.9\"",
    "pdm lock --update-reuse -G docstubs_old --lockfile pdm.docstubs_old.lock",
] }
typecheck = 'basedpyright'
ruff_check = { composite = ['ruff check', 'ruff format --check --diff'] }
ruff_fix = { composite = ['ruff check --fix', 'ruff format --fix'] }
pylint = 'pylint basedpyright based_build pdm_build.py'
test_python = 'pytest tests'
generate_docstubs = { call = "based_build.generate_docstubs:main" }
localization_helper = 'python based_build/localization_helper.py'
docs = "mkdocs serve"

[tool.pdm.build]
excludes = ["tests/", "pdm_build.py"]
source-includes = [
    "build",
    "based_build",
    "docstubs",
    "packages/pyright",
    "packages/pyright-internal",
    "lerna.json",
    "package.json",
    "package-lock.json",
    "tsconfig.json",
]

[project]
name = "basedpyright"
description = "static type checking for Python (but based)"
dynamic = ["version"]
authors = [
    { name = "detachhead", email = "detachhead@users.noreply.github.com" },
]
dependencies = [
    # required by the basedpyright cli & langserver wrapper scripts. only binaries are required (no cli)
    # since the user shouldn't have a node/npm binary unknowingly added to their PATH
    "nodejs-wheel-binaries>=20.13.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
repository = "https://github.com/detachhead/basedpyright"

[project.scripts]
basedpyright = 'basedpyright.pyright:main'
basedpyright-langserver = 'basedpyright.langserver:main'

[build-system]
requires = [
    "pdm-backend>=2.3.0",
    # required for building the pyright npm package to be bundled in the pypi package.
    # cli is required due to dependencies with install scripts that assume node/npm is in the path
    "nodejs-wheel>=20.13.1",
    # used in pdm_build.py:
    "typing_extensions>=4.12.2",
    "docify>=1.0.0",
]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
fail-on = "I"
bad-names = ["foo", "bar", "baz", "retval"]
load-plugins = [
    # we don't use all of these but enabling them all for completeness since there's no error if a rule is not found
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_caluse",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.empty_comment",
    "pylint.extensions.emptystring",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.magic_value",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used",
]

[tool.pylint."MESSAGE CONTROL"]
disable = ["R", "C", "E", "F", "W", "I"]
enable = [
    "useless-suppression",
    # rules that have not yet been implemented in ruff. once all of these are implemented in ruff, we should remove pylint
    # (see https://github.com/astral-sh/ruff/issues/970):
    "access-member-before-definition",
    "assignment-from-none",
    "dict-iter-missing-items",
    "invalid-bool-returned",
    "invalid-getnewargs-ex-returned",
    "invalid-getnewargs-returned",
    "invalid-length-hint-returned",
    "invalid-slice-index",
    "invalid-slice-step",
    "invalid-slots",
    "invalid-slots-object",
    "invalid-unicode-codec",
    "logging-format-truncated",
    "logging-unsupported-format",
    "method-hidden",
    "modified-iterating-dict",
    "potential-index-error",
    "relative-beyond-top-level",
    "abstract-method",
    "arguments-out-of-order",
    "attribute-defined-outside-init",
    "confusing-with-statement",
    "deprecated-decorator",
    "deprecated-module",
    "differing-param-doc",
    "global-variable-undefined",
    "missing-param-doc",
    "modified-iterating-list",
    "multiple-constructor-doc",
    "non-parent-init-called",
    "overlapping-except",
    "preferred-module",
    "raising-format-tuple",
    "redefined-outer-name",
    "redefined-slots-in-subclass",
    "redundant-returns-doc",
    "redundant-yields-doc",
    "shallow-copy-environ",
    "useless-param-doc",
    "useless-parent-delegation",
    "useless-type-doc",
    "using-constant-test",
    "bad-file-encoding",
    "dict-init-mutate",
    "use-implicit-booleaness-not-comparison",
    "chained-comparison",
    "confusing-consecutive-elif",
    "consider-using-augmented-assign",
    "consider-using-join",
    "consider-using-max-builtin",
    "consider-using-min-builtin",
    "consider-using-namedtuple-or-dataclass",
    "consider-using-tuple",
    "simplifiable-condition",
    "simplify-boolean-expression",
]

[tool.pylint.REPORTS]
reports = "no"
output-format = "colorized"
score = "no"

[tool.pylint.FORMAT]
max-line-length = 200

[tool.basedpyright]
pythonVersion = "3.8"
include = ["basedpyright", "based_build", "pdm_build.py", "tests"]
# https://github.com/DetachHead/basedpyright/issues/31
ignore = ["pw", "basedpyright/dist", "packages", "build"]
exclude = ["pw", "basedpyright/dist", "packages", "build"]
reportImplicitStringConcatenation = false                  # conflicts with ruff formatter

# currently commented out due to https://github.com/DetachHead/basedpyright/issues/570
# only seem to be needed when using pycharm, which i dont really care about anyway because pycharm sucks
# venvPath = "."
# venv = ".venv"


[tool.ruff]
target-version = "py38"
respect-gitignore = true
line-length = 100
preview = true
unsafe-fixes = true
extend-exclude = [
    "pw",
    "packages/pyright-internal/typeshed-fallback",
    "docstubs",
    "packages/pyright-internal/src/tests/samples",
    "build",
]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    # conflicts with or covered by another tool:
    "ANN",     # flake8-annotations (covered by basedpyright)
    "PLE0605", # Invalid format for `__all__`, must be `tuple` or `list` (covered by basedpyright)
    "RUF013",  # PEP 484 prohibits implicit Optional (covered by basedpyright)
    "RUF016",  # Slice in indexed access to type (covered by basedpyright)
    "D418",    # Function/Method decorated with @overload shouldn't contain a docstring (basedpyright supports it)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "PLC0414", # Import alias does not rename original package (used by basedpyright for explicit re-export)

    # rules i disabled because i don't like them:
    "EM",      # flake8-errmsg
    "FIX",     # flake8-fixme
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR1722", # Use `sys.exit()` instead of `exit`
    "PLW2901", # `for` loop variable overwritten by assignment target
    "PLR0911", # Too many return statements
    "PLW0603", # Using the global statement is discouraged
    "PLC0105", # `TypeVar` name does not reflect its covariance
    "TRY002",  # Create your own exception
    "TRY003",  # Avoid specifying long messages outside the exception class
    "D10",     # Missing docstring
    "D203",    # 1 blank line required before class docstring
    "D205",    # 1 blank line required between summary line and description
    "D209",    # Multi-line docstring closing quotes should be on a separate line
    "D212",    # Multi-line docstring summary should start at the first line
    "D213",    # Multi-line docstring summary should start at the second line
    "D400",    # First line should end with a period
    "D401",    # First line should be in imperative mood
    "D403",    # First word of the first line should be properly capitalized
    "D404",    # First word of the docstring should not be `This`
    "D405",    # Section name should be properly capitalized
    "D406",    # Section name should end with a newline
    "D415",    # First line should end with a period, question mark, or exclamation point
    "PT013",   # Found incorrect import of pytest, use simple import pytest instead (only for bad linters that can't check the qualname)
    "TD002",   # Missing author in TODO
    "CPY001",  # missing-copyright-notice
    "C901",    # max-complexity
    "DOC402",  # docstring-missing-yields
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["A001", "A002", "N"] # we don't control names in 3rd party modules
"tests/**/*.py" = [
    "S", # none of these security focused rules are relevant for the tests
]
[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
xfail_strict = true
addopts = ['--strict-markers']
markers = [
    'needs_all_docstubs', # indicates that the test needs to run after the docstubs are built, rather than during validation
]
